# CPLT_template_compilation_exercise

./: CMakeLists.txt  README.md  build.bat
src/: main.cpp
